# KToolBox

./: .gitignore  README  README.md  README_EN.md  README_zh-CN.md  flake.nix  migrate-to-uv.sh  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: python-package.yml  python-publish.yml
docs/en/: faq.md  index.md
docs/en/commands/: guide.md
docs/zh/: index.md  more.md
docs/zh/commands/: guide.md
ktoolbox/: _cli_zh.py  cli.py
ktoolbox/action/: job.py
ktoolbox/webui/: __init__.py  config.py  server.py  tasks.py
ktoolbox/webui/static/: index.html
ktoolbox/webui/static/assets/: index-BZhnUnkq.css  index-CEPkDKDg.js  index-CH24WYGS.js  index-DWl0t5nx.css  index-DYHWbMBE.js
master/: sitemap.xml
tests/ktoolbox/: test_webui.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  api.ts  styles.css
