[project]
name = "ktoolbox"
version = "0.24.0"
description = "A useful CLI tool for downloading posts in Kemono.cr / .su / .party"
authors = [{ name = "Ljzd-PRO", email = "me@ljzd.link" }]
requires-python = ">=3.8.1,<=3.14"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "kemono",
    "kemono.cr",
    "kemono.su",
    "kemono.party",
    "cli-app",
    "downloader",
    "os-independent",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Terminals",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.4.2,<3",
    "pydantic-settings>=2.0.3,<3",
    "tenacity>=8.2.3,<10.0.0",
    "httpx[socks]>=0.24.1,<0.29.0",
    "fire>=0.5,<0.8",
    "tqdm>=4.66.1,<5",
    "loguru>=0.7.2,<0.8",
    "aiofiles>=23.2.1,<24",
    "pathvalidate>=3.2.0,<4",
    "settings-doc>=4.3.1,<5",
    "rich>=14.1.0,<15",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.19,<0.22 ; sys_platform != 'win32'"]
winloop = ["winloop>=0.1.6 ; sys_platform == 'win32'"]
urwid = ["urwid"]

[project.urls]
Homepage = "https://ktoolbox.readthedocs.io/"
Repository = "https://github.com/Ljzd-PRO/KToolBox"
Documentation = "https://ktoolbox.readthedocs.io/"
"Bug Tracker" = "https://github.com/Ljzd-PRO/KToolBox/issues"

[project.scripts]
ktoolbox = "ktoolbox.__main__:main"

[dependency-groups]
pyinstaller = ["pyinstaller==6.15.0"]
docs = [
    "mkdocs>=1.5.3,<2",
    "mkdocs-static-i18n>=1.2.0,<2",
    "mkdocs-material>=9.4.14,<10",
    "mkdocstrings[python]>=0.24,<0.27",
    "mike>=2.0.0,<3",
]
test = [
    "pytest==8.3.3",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "allpairspy==2.5.1",
]
dev = ["datamodel-code-generator>=0.22.1,<0.24.0"]

[tool.uv.build-backend]
module-name = ["ktoolbox"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
