[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ktoolbox"
version = "0.24.0"
description = "A useful CLI tool for downloading posts in Kemono.cr / .su / .party"
readme = "README.md"
requires-python = ">=3.8.1,<=3.14"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Ljzd-PRO", email = "me@ljzd.link" }
]
keywords = ["kemono", "kemono.cr", "kemono.su", "kemono.party", "cli-app", "downloader", "os-independent"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Terminals",
]
dependencies = [
  "pydantic>=2.4.2",
  "pydantic-settings>=2.0.3",
  "tenacity>=8.2.3,<10.0.0",
  "httpx[socks]>=0.24.1,<0.29.0",
  "fire>=0.5,<0.8",
  "tqdm>=4.67.1",
  "loguru>=0.7.2",
  "aiofiles>=23.2.1",
  "pathvalidate>=3.2.0",
  "settings-doc>=4.3.1",
  "rich>=14.3.3",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.19,<0.22; platform_system != 'Windows'"]
winloop = ["winloop>=0.1.6; platform_system == 'Windows'"]
urwid = [
  "urwid>=2.6.16; platform_system != 'Windows'",
  "urwid[curses]>=2.6.16; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://ktoolbox.readthedocs.io/"
Repository = "https://github.com/Ljzd-PRO/KToolBox"
Documentation = "https://ktoolbox.readthedocs.io/"
"Bug Tracker" = "https://github.com/Ljzd-PRO/KToolBox/issues"

[project.scripts]
ktoolbox = "ktoolbox.__main__:main"

[dependency-groups]
dev = [
  "datamodel-code-generator>=0.22.1,<0.24.0",
]

test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.23.5",
  "pytest-cov==4.1.0",
  "allpairspy==2.5.1",
]

docs = [
  "mkdocs>=1.5.3",
  "mkdocs-static-i18n>=1.3.1",
  "mkdocs-material>=9.4.14",
  "mkdocstrings[python]>=0.24,<0.27",
  "mike>=2.0.0",
]

pyinstaller = [
  "pyinstaller==6.15.0",
]
